Fixed animation on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 @keyframes fadeIn {
